add kasir-app_update final